infra/k8s/ingress-gateway/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
spec:
  rules:
    - host: acute.dev
      http:
        paths: 
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                 name: auth-srv
                 port:
                    number: 3000
